@@ -1,6 +1,8 @@
 Wyrd ChangeLog
 --------------------------------------------------------------------------------
 
+2006-02-24     Set the default editor to $EDITOR.
+
 2006-02-04     Implemented the 'goto' operation, which allows the user to
                manually enter a date and then jump immediately to that day.
                The boolean option 'goto_big_endian' selects whether dates
